// Dinkur the task time tracking utility.
// <https://github.com/dinkur/dinkur>
//
// Copyright (C) 2021 Kalle Fagerberg
// SPDX-FileCopyrightText: 2021 Kalle Fagerberg
// SPDX-License-Identifier: GPL-3.0-or-later
//
// This program is free software: you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the
// Free Software Foundation, either version 3 of the License, or (at your option)
// any later version.
//
// This program is distributed in the hope that it will be useful, but WITHOUT
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
// FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
// details.
//
// You should have received a copy of the GNU General Public License along with
// this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

import "api/dinkurapi/v1/event.proto";
import "api/dinkurapi/v1/tasker.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dinkur/dinkur/api/dinkurapi/v1";

package dinkurapi.v1;

service Alerter {
  rpc StreamAlert (StreamAlertRequest) returns (stream StreamAlertResponse);
  rpc GetAlertList (GetAlertListRequest) returns (GetAlertListResponse);
  rpc DeleteAlert (DeleteAlertRequest) returns (DeleteAlertResponse);
}

message StreamAlertRequest {
}

message StreamAlertResponse {
  Alert alert = 1;
  Event event = 2;
}

message GetAlertListRequest {
}

message GetAlertListResponse {
  repeated Alert alerts = 1;
}

message DeleteAlertRequest {
  uint64 id = 1;
}

message DeleteAlertResponse {
  Alert deleted_alert = 1;
}

message Alert {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  oneof type {
    AlertPlainMessage plain_message = 4;
    AlertAfk afk = 5;
    AlertFormerlyAfk formerly_afk = 6;
  }
}

message AlertPlainMessage {
  string message = 2;
}

message AlertAfk {
  Task active_task = 1;
}

message AlertFormerlyAfk {
  Task active_task = 1;
  google.protobuf.Timestamp afk_since = 2;
}
